[package]
name = "rs-collections"
version = "0.1.6"
authors = ["Raja Lehtihet <raja.lehtihet@gmail.com>", "Wael El Oraiby <wael.eloraiby@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "generic collections (no dependency on std)"
repository = "https://github.com/NeoCogi/rs-collections"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-mem = "0.2.2"
